--- a/app/templates/single.hbs
+++ b/app/templates/single.hbs
@@ -2,6 +2,7 @@
     <div class="singleMain">
       <i class="fa fa-camera"></i>
       <p>posted by <span>{{owner}}<span></p>
+      <p class="deletePost" id="deletePost" data-id="{{id}}"><i class="fa fa-minus-square" data-id="{{id}}"></i></p>
 
       <div class="image">
         <img src="{{image_url}}">
