Previous guesses button functional Appends guesses as they are made on single page

--- a/app/templates/single.hbs
+++ b/app/templates/single.hbs
@@ -23,14 +23,10 @@
 
       </form>
 
-    <div class="singleGuesses" id="incorrectGuesses">
-    <ul class="incorrectGuesses" id="incorrectGuesses">
-
-    {{#each guess}}
-      <li></li>
-    {{/each}}
-
-    </ul>
+    <div class="singleGuesses" id="singleGuesses">
+    <p id="seeOldGuesses">See All Old Guesses</p>
+      <ul class="incorrectGuesses" id="incorrectGuesses">
+      </ul>
     </div>
 
     </div> <!-- end singleMain -->
