--- a/app/css/main.css
+++ b/app/css/main.css
@@ -229,10 +229,52 @@ header {
         color: #FF8236; }
     .container .singleMain .image img {
       width: 100%; }
+    .container .singleMain .image .imageInfo span {
+      color: #1695A3;
+      font-weight: bold; }
+    .container .singleMain .image .imageInfo .showHint {
+      cursor: pointer; }
     .container .singleMain .guess {
       width: 90%;
       margin: auto;
-      margin-bottom: 2em; }
+      margin-bottom: 2em;
+      margin-left: 2em;
+      float: left;
+      width: 70%;
+      padding: 1.6em; }
+    .container .singleMain .guessBtn {
+      float: right;
+      margin-right: 2em; }
+    .container .singleMain .singleGuesses {
+      clear: both; }
+      .container .singleMain .singleGuesses p {
+        display: block;
+        padding: .8em;
+        border: 1px solid #225378;
+        color: #225378;
+        font-family: "Roboto", sans-serif;
+        cursor: pointer;
+        margin-left: 1.7em; }
+        .container .singleMain .singleGuesses p:hover {
+          background-color: #FF8236;
+          color: white;
+          border: none; }
+      .container .singleMain .singleGuesses ul {
+        display: block;
+        clear: both;
+        text-align: left;
+        margin-left: 1em; }
+        .container .singleMain .singleGuesses ul li {
+          color: #225378;
+          margin-left: 2.7em;
+          padding-top: 1em;
+          position: relative; }
+          .container .singleMain .singleGuesses ul li::before {
+            content: '\f00d';
+            font-family: FontAwesome;
+            position: absolute;
+            color: #FF8236;
+            left: -20px; }
 
 aside {
   float: left;
