--- a/app/templates/single.hbs
+++ b/app/templates/single.hbs
@@ -8,8 +8,9 @@
         <img src="{{image_url}}">
 
         <div class="imageInfo">
-          <p>Incorrect so far: {{!-- {{}} --}}</p>
-          <p>Correct so far: {{!-- {{}} --}}</p>
+          <p>First solved by: <span>{{solved_by}}</span></p>
+          <p>Correct so far: <span>{{solved}}</span></p>
+          <p>Hint: <span>{{hint}}</span></p>
 
           <!-- would be cool to add div with user's score and addClass show on hover for this information -->
 
@@ -24,7 +25,7 @@
       </form>
 
     <div class="singleGuesses" id="singleGuesses">
-    <p id="seeOldGuesses">See All Old Guesses</p>
+    <p id="seeOldGuesses">See your old guesses</p>
       <ul class="incorrectGuesses" id="incorrectGuesses">
       </ul>
     </div>
