--- a/app/templates/newpost.hbs
+++ b/app/templates/newpost.hbs
@@ -5,6 +5,7 @@
     <input type="text" placeholder="Answer" id="answer">
     <input type="text" placeholder="Add a hint here" id="hint">
     <button id="submitPost">Add Post</button>
+    <button id="deletePost">Delete Post</button>
   </form>
 
 </div>
