--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -3,7 +3,8 @@
         <div class="asideTop">
           <h4>{{username}}</h4>
           <div class="avatar">
-            <img src="http://placehold.it/100x100">
+          {{!--   <img src="http://placehold.it/100x100"> --}}
+              <img src="https://raw.githubusercontent.com/TRPMorrison/Qpic/master/Qlogo.png">
           </div>
           <div class="score">
             <p>Current score: {{points}}</p>
@@ -18,6 +19,6 @@
         </div>
 
 <div class="deleteDiv">
-  <button id="#deleteButton">Delete Account</button>
+  <button id="#deleteUser">Delete Account</button>
 </div>
 
