Updated small float so username wasn't pushed to second line on longer names

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -235,11 +235,11 @@ header {
         .poster {
             display: inline;
             color: #1695A3;
-            float: right;
+            float: left;
             margin-bottom: .5em;
             position: relative;
             font-family: $roboto;
-            font-size: 10pt;
+            font-size: 12px;
             letter-spacing: .1em;
             span {
                 font-size: 10pt;
