--- a/app/css/main.css
+++ b/app/css/main.css
@@ -180,11 +180,11 @@ header {
     .mainImages .imageWrap .poster {
       display: inline;
       color: #1695A3;
-      float: right;
+      float: left;
       margin-bottom: .5em;
       position: relative;
       font-family: "Roboto", sans-serif;
-      font-size: 10pt;
+      font-size: 12px;
       letter-spacing: .1em; }
       .mainImages .imageWrap .poster span {
         font-size: 10pt;
