--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -17,7 +17,7 @@
 
        <div class="imageWrap">
         <p class="poster">
-  <i class="fa fa-camera"> Submitted by: </i>
+  <i class="fa fa-camera"> Posted by: </i>
     <span>{{ owner }}</span></p>
 
           <div class="actualImage">
