--- a/app/templates/newpost.hbs
+++ b/app/templates/newpost.hbs
@@ -1,11 +1,19 @@
 <div class="newpostMain">
 
-  <form id="postImage" class="postImage">
-    <input type="text" placeholder="Image URL" id="image_url">
-    <input type="text" placeholder="Answer" id="answer">
-    <input type="text" placeholder="Add a hint here" id="hint">
-    <button id="submitPost">Add Post</button>
-    <button id="deletePost">Delete Post</button>
-  </form>
+  <h2>Add a post. And don't make it easy!</h2>
+
+
+    <form id="postImage" class="postImage">
+      <input type="text" placeholder="Image URL" id="image_url">
+      <input type="text" placeholder="Answer" id="answer">
+      <input type="text" placeholder="Add a hint here" id="hint">
+      <button id="submitPost">Add post</button>
+      {{!-- <button id="deletePost">Delete Post</button> --}}
+    </form>
+    <button id="home">Go home</button>
+
+  <div class="preview" id="preview"></div>
+
+
 
 </div>
