--- a/app/templates/single.hbs
+++ b/app/templates/single.hbs
@@ -25,7 +25,7 @@
       </form>
 
     <div class="singleGuesses" id="singleGuesses">
-    <p id="seeOldGuesses">See your old guesses</p>
+    <p id="seeOldGuesses">See your previous <span>incorrect</span> guesses</p>
       <ul class="incorrectGuesses" id="incorrectGuesses">
       </ul>
     </div>
