--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -6,6 +6,7 @@
 <form id="loginForm" class="loginForm">
   <input type="text" id="loginusername" placeholder=" username">
   <input type="password" id="loginpassword" placeholder=" password">
+  <div class="errormsg" id="errormsg"></div>
   <button id="loginButton">Login</button>
 </form>
 </div>
@@ -16,6 +17,7 @@
   <input type="email" id="email" placeholder=" email">
   <input type="text" id="regusername" placeholder=" username">
   <input type="password" id="regpassword" placeholder=" password">
+  <div class="errormsg" id="errormsgregister"></div>
   <button id="registerButton">Register</button>
 
 </form>
