--- a/app/css/main.css
+++ b/app/css/main.css
@@ -123,6 +123,8 @@ header {
 .mainImages {
   float: right;
   width: 100%; }
+  .mainImages ul {
+    margin-right: 1em; }
   .mainImages h2 {
     display: inline-block;
     float: left;
@@ -169,7 +171,7 @@ header {
       margin: 0; }
   .mainImages .imageWrap {
     position: relative;
-    width: 250px;
+    width: 100%;
     height: 260px;
     overflow: hidden;
     border-radius: 4px;
@@ -177,7 +179,8 @@ header {
     float: right;
     display: inline;
     border: 1px solid #ACF0F2;
-    padding: 10px 20px 100px 20px; }
+    padding: 10px 20px 100px 20px;
+    background-color: white; }
     .mainImages .imageWrap .actualImage {
       overflow: hidden;
       height: 170px;
