--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -171,6 +171,10 @@ header {
 .mainImages {
     float: right;
     width: 100%;
+
+    ul {
+        margin-right: 1em;
+    }
     h2 {
         display: inline-block;
         float: left;
@@ -226,7 +230,7 @@ header {
     }
     .imageWrap {
         position: relative;
-        width: 250px;
+        width: 100%;
         height: 260px;
         overflow: hidden;
         border-radius: 4px;
@@ -235,6 +239,7 @@ header {
         display: inline;
         border: 1px solid #ACF0F2;
         padding: 10px 20px 100px 20px;
+        background-color: white;
 
         .actualImage {
           overflow: hidden;
