--- a/app/templates/single.hbs
+++ b/app/templates/single.hbs
@@ -19,10 +19,11 @@
 
       <form class="guessInput" id="guessInput">
         <input type="text" placeholder="What's your guess?" id="guess" class="guess">
-
         <a href="#/leaderboard/{{id}}"><button id="guessBtn" class="guessBtn">Check it!</button></a>
 
       </form>
+      <div class="errormsg" id="errorMsgGuess"></div>
+
 
     <div class="singleGuesses" id="singleGuesses">
     <p id="seeOldGuesses">See your previous <span>incorrect</span> guesses</p>
