--- a/app/css/main.css
+++ b/app/css/main.css
@@ -240,6 +240,9 @@ header {
     margin-bottom: 5em;
     position: relative;
     font-family: "Roboto", sans-serif; }
+    .container .singleMain .guessError {
+      padding: 0 0 1em 1.8em;
+      color: #FF8236; }
     .container .singleMain .fa-camera {
       position: absolute;
       top: 1.3em;
